remove obsolete compiler configuration
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>